# titato-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_cmake.bat
include/: BoardCommon.h  TitatoGame.h
src/: TicTacToeBoard.cpp  TicTacToeBoard.h  TitatoGameImpl.cpp  TitatoGameImpl.h
